Inmob-Salesforce/force-app/main/default/objects/Detalle_Promocion__c/Detalle_Promocion__c.object-meta.xml
<CustomObject>
    <label>Detalle Promoción</label>
    <nameField>
        <displayFormat>Pr-{000000000}</displayFormat>
        <label>Código Detalle Promoción</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Detalles Promoción</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>