Inmob-Salesforce/force-app/main/default/objects/Detalle_Promocion__c/fields/CI_Fecha_Promo_Agre__c.field-meta.xml
<CustomField>
    <fullName>CI_Fecha_Promo_Agre__c</fullName>
    <label>Fecha de Promoción Agregada</label>
    <type>Date</type>
</CustomField>