Inmob-Salesforce/force-app/main/default/objects/Detalle_Promocion__c/fields/Promocion__c.field-meta.xml
<CustomField>
    <fullName>Promocion__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Promoción</label>
    <referenceTo>Promocion__c</referenceTo>
    <relationshipLabel>Detalles Promoción</relationshipLabel>
    <relationshipName>Detalles_Promocion</relationshipName>
    <type>Lookup</type>
</CustomField>