Inmob-Salesforce/force-app/main/default/objects/Detalle_Promocion__c/fields/Secuencial_Promocion_Etapa__c.field-meta.xml
<CustomField>
    <fullName>Secuencial_Promocion_Etapa__c</fullName>
    <label>Secuencial Promoción Etapa</label>
    <precision>13</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>